finished atlas 1st draft, updated gallery button in index

--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -237,7 +237,7 @@
         <div class="text-break"></div>
         <div class="text-break"></div>
         <p class="blue-subtitle">The map</p>
-        <p class="subtitle">Color coding content by genre</p>
+        <p class="subtitle">Color coded content map</p>
         <p style="color: #757575">
           With 400 videos to analyze, I used ML tools—Whisper, CLIP, BLIP, and
           OCR—to categorize and color-code each one, forming distinct genre
@@ -281,16 +281,14 @@
                 <h4 style="font-weight: 600">Before</h4>
               </div>
               <div class="text-break"></div>
-              <video class="border" width="100%" loop autoplay muted>
-                <source
-                  src="../media/chronicle/thumbnail.mp4"
-                  type="video/mp4"
-                />
-              </video>
+              
+              <div class="image-gallery-border">
+                <img class="project" src="../images/atlas/process-thumbnails.png" />
+                </div>
               <div class="text-break"></div>
               <div class="project-descriptions">
                 <h4 style="color: #757575">
-                  Video thumbnails are readily viewable, and overwhelming.
+                  Video thumbnails are viewable, but only comfortable in small quantities.
                 </h4>
               </div>
             </div>
@@ -299,16 +297,13 @@
                 <h4 style="font-weight: 600">After</h4>
               </div>
               <div class="text-break"></div>
-              <video class="border" width="100%" loop autoplay muted>
-                <source
-                  src="../media/chronicle/thumbnail.mp4"
-                  type="video/mp4"
-                />
-              </video>
+               <div class="image-gallery">
+                <img class="project" src="../images/atlas/opaque-nodes.png" />
+                </div>
               <div class="text-break"></div>
               <div class="project-descriptions">
                 <h4 style="color: #757575">
-                  Video previews are hidden behind opaque genre colors.
+                  Video previews are hidden behind opaque genre colors - sustainable at scale.
                 </h4>
               </div>
             </div>
@@ -324,8 +319,8 @@
                 <div class="text-break"></div>
                 <h4 style="color: #757575">
                     Previous maps were either too free-form or too rigid; the
-                    region-based map balances category clarity with the natural chaos of
-                    short-form media.
+                    region-based map balances category clarity with the natural chaos of the
+                    short-form media environment.
                 </h4>
                 <div class="smallbr"></div>
                 <div class="welcome-container">
@@ -336,14 +331,14 @@
                     <div class="text-break"></div>
                     <video class="border" width="100%" loop autoplay muted>
                         <source
-                        src="../media/chronicle/thumbnail.mp4"
+                        src="../images/atlas/map-iteration.mp4"
                         type="video/mp4"
                         />
                     </video>
                     <div class="text-break"></div>
                     <div class="project-descriptions">
                         <h4 style="color: #757575">
-                        Video thumbnails are readily viewable, and overwhelming.
+                        The map is a rigid ring, which is legible but not reflective of the media environment.
                         </h4>
                     </div>
                     </div>
@@ -353,16 +348,16 @@
                         <h4 style="font-weight: 600">After</h4>
                     </div>
                     <div class="text-break"></div>
-                    <video class="border" width="100%" loop autoplay muted>
+                    <video width="100%" loop autoplay muted>
                         <source
-                        src="../media/chronicle/thumbnail.mp4"
+                        src="../images/atlas/map-current.mp4"
                         type="video/mp4"
                         />
                     </video>
                     <div class="text-break"></div>
                     <div class="project-descriptions">
                         <h4 style="color: #757575">
-                        Video previews are hidden behind opaque genre colors.
+                        The map becomes more legible through interaction, but is otherwise more organic.
                         </h4>
                     </div>
                     </div>
@@ -377,15 +372,18 @@
                 broadened collective algorithm.
                 </p>
                 <div class="smallbr"></div>
-
+</div>
                 <div class="welcome-container">
                 <div class="welcome-box1">
                     <div class="project-descriptions">
                     <h4 style="font-weight: 600">User Hover</h4>
                     </div>
                     <div class="text-break"></div>
-                    <video class="border" width="100%" loop autoplay muted>
-                    <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
+                    <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/hover-user.mp4"
+                        type="video/mp4"
+                        />
                     </video>
                     <div class="text-break"></div>
                     <div class="project-descriptions">
@@ -400,8 +398,11 @@
                     <h4 style="font-weight: 600">Video Hover</h4>
                     </div>
                     <div class="text-break"></div>
-                    <video class="border" width="100%" loop autoplay muted>
-                    <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
+                     <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/video-hover.mp4"
+                        type="video/mp4"
+                        />
                     </video>
                     <div class="text-break"></div>
                     <div class="project-descriptions">
@@ -413,7 +414,7 @@
                 </div>
                 </div>
             </div>
-</div>
+
 
       <div class="bigbr"></div>
 
@@ -425,6 +426,7 @@
           unclear. Cards complement the map by presenting structured data in a
           more familiar format.
         </p>
+      </div>
         <div class="smallbr"></div>
         <div class="welcome-container">
           <div class="welcome-box1">
@@ -432,9 +434,12 @@
               <h4 style="font-weight: 600">User Click</h4>
             </div>
             <div class="text-break"></div>
-            <video class="border" width="100%" loop autoplay muted>
-              <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
-            </video>
+             <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/user-click.mp4"
+                        type="video/mp4"
+                        />
+                    </video>
             <div class="text-break"></div>
             <div class="project-descriptions">
               <h4 style="color: #757575">
@@ -449,17 +454,21 @@
               <h4 style="font-weight: 600">Video Click</h4>
             </div>
             <div class="text-break"></div>
-            <video class="border" width="100%" loop autoplay muted>
-              <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
-            </video>
+            <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/video-click.mp4"
+                        type="video/mp4"
+                        />
+                    </video>
             <div class="text-break"></div>
             <div class="project-descriptions">
               <h4 style="color: #757575">
-                Clicking a video creates a video player card.
+                Clicking a video creates a video player card and tethers the node more to it's submitter until unselected.
               </h4>
             </div>
           </div>
         </div>
+    <div class="core">
         <div class="bigbr"></div>
         <p class="subtitle">Multi-select users to compare and contrast</p>
         <p style="color: #757575">
@@ -468,10 +477,19 @@
           with others.
         </p>
         <div class="smallbr"></div>
-        <video class="border" width="100%" loop autoplay muted>
-          <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
-        </video>
+        <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/multi-select.mp4"
+                        type="video/mp4"
+                        />
+                    </video>
+                            <div class="text-break"></div>
 
+<div class="project-descriptions">
+          <h4 style="color: #757575">
+            Select up to 3 users at a time to compare their tastes and conections across the map and cards.
+          </h4>
+        </div>
         <div class="bigbr"></div>
 
         <p class="subtitle">Cards as navigational tools</p>
@@ -485,9 +503,12 @@
           <h4 style="font-weight: 600">Genre Breakdown</h4>
         </div>
         <div class="text-break"></div>
-        <video class="border" width="100%" loop autoplay muted>
-          <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
-        </video>
+         <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/genre-breakdown.mp4"
+                        type="video/mp4"
+                        />
+                    </video>
         <div class="text-break"></div>
         <div class="project-descriptions">
           <h4 style="color: #757575">
@@ -501,9 +522,12 @@
           <h4 style="font-weight: 600">User Suggestion</h4>
         </div>
         <div class="text-break"></div>
-        <video class="border" width="100%" loop autoplay muted>
-          <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
-        </video>
+       <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/user-suggestion.mp4"
+                        type="video/mp4"
+                        />
+                    </video>
         <div class="text-break"></div>
         <div class="project-descriptions">
           <h4 style="color: #757575">
@@ -525,9 +549,12 @@
           <h4 style="font-weight: 600">Suggesting your opposite</h4>
         </div>
         <div class="text-break"></div>
-        <video class="border" width="100%" loop autoplay muted>
-          <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
-        </video>
+         <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/opposite.mp4"
+                        type="video/mp4"
+                        />
+                    </video>
         <div class="text-break"></div>
         <div class="project-descriptions">
           <h4 style="color: #757575">
@@ -542,9 +569,12 @@
           <h4 style="font-weight: 600">Unexplored Genres</h4>
         </div>
         <div class="text-break"></div>
-        <video class="border" width="100%" loop autoplay muted>
-          <source src="../media/chronicle/thumbnail.mp4" type="video/mp4" />
-        </video>
+       <video width="100%" loop autoplay muted>
+                        <source
+                        src="../images/atlas/unexplored.mp4"
+                        type="video/mp4"
+                        />
+                    </video>
         <div class="text-break"></div>
         <div class="project-descriptions">
           <h4 style="color: #757575">
