--- a/index.html
+++ b/index.html
@@ -179,28 +179,16 @@
 
         <div class="project-box2">
           <a
-            href="https://ysiuz.github.io/20250224_force-directed_exp/"
+            href="gallery/atlas.html"
             target="_blank"
             class="gallery-anchor"
           >
-            <div class="mockup-wrapper">
-              <div class="browser-mockup">
-                <div class="browser-bar">
-                  <div class="circles">
-                    <span class="red"></span>
-                    <span class="yellow"></span>
-                    <span class="green"></span>
-                  </div>
-                  <span class="url">ysiuz.github.io</span>
-                </div>
-                <video width="100%" loop autoplay muted>
-                  <source
-                    src="../../images/atlas/20250507_atlas-thumbnail_v5.mp4"
-                    type="video/mp4"
-                  />
-                </video>
-              </div>
-            </div>
+             <video width="100%" loop autoplay muted>
+              <source
+                src="../../images/atlas/genre-breakdown.mp4"
+                type="video/mp4"
+              />
+            </video>
 
             <div class="text-break"></div>
             <p style="color: #363636">Atlas</p>
