adjusting topper info for typo

--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -61,9 +61,8 @@
     <div class="fixed-nav-panel">
       <div class="nav-panel-content">
         <a href="#" class="nav-panel-button">Background</a>
-        <a href="#features" class="nav-panel-button">Features</a>
-        <a href="#process" class="nav-panel-button">Process</a>
-        <a href="#takeaway" class="nav-panel-button">Takeaway</a>
+        <a href="#features" class="nav-panel-button">Core Experiences</a>
+        <a href="#takeaway" class="nav-panel-button">Results</a>
       </div>
     </div>
 
@@ -100,7 +99,7 @@
               <div class="text-break"></div>
 
               <h4>Sole Designer</h4>
-              <h4>Solde Developer</h4>
+              <h4>Sole Developer</h4>
             </div>
             <div class="quick-facts_container">
               <h4 style="color: #757575">Skills</h4>
@@ -109,7 +108,7 @@
               <h4>Interaction Design</h4>
               <h4>Data Visualization</h4>
               <h4>Prototyping</h4>
-              <h4>Development</h4>
+              <h4>Vibe Coding :^)</h4>
             </div>
 
             <div class="quick-facts_container">
