adding more context to atlas

--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -196,6 +196,20 @@
         <video width="100%" loop autoplay muted>
           <source src="../images/atlas/solution.mp4" type="video/mp4" />
         </video>
+                <div class="smallbr"></div>
+
+        <video width="100%" loop autoplay muted>
+          <source src="../images/atlas/video-loop.mp4" type="video/mp4" />
+        </video>
+                      <div class="text-break"></div>
+
+        <div class="project-descriptions">
+                <h4 style="color: #757575">
+                  Each colorful node is an Instagram Reel / TikTok that's been submitted to Atlas.
+                </h4>
+              </div>
+        <div class="smallbr"></div>
+        
       </div>
 
       <div class="bigbr"></div>
