making copy edits, and breaking process videos out of their div for better sizing

--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -43,6 +43,10 @@
               </a>
             </div>
             <div class="special-buttons">
+              <a href="https://ysiuz.github.io/20250224_force-directed_exp/"
+          target="_blank" class="nav-button">
+                  View Live Prototype↗
+              </a>
               <a href="../index.html" class="nav-button">
                 <h5>☁</h5>
                 &nbsp; Work
@@ -129,8 +133,7 @@
       <div class="bigbr"></div>
       <div class="core">
         <p class="subtitle">
-          A web platform that visualizes user’s social media consumption habits
-          and connections in order to broaden our algorithmic perspectives.
+          A web platform that visualizes our social media diets, and prompts reflection.
         </p>
       </div>
 
@@ -185,12 +188,10 @@
       <div class="core">
         <p class="blue-subtitle">Solution</p>
         <p class="subtitle">
-          Atlas visualizes our short-form media tastes in context
+         Atlas puts your social media diet in context with others
         </p>
         <p style="color: #757575">
-          Through submitted content, Atlas categorizes each user’s tastes,
-          similarities, and differences relative to others, and charts them all
-          together.
+          Using user-submitted content, it maps our tastes, similarities, differences, and blindspots, all in one shared view.
         </p>
         <div class="smallbr"></div>
         <video width="100%" loop autoplay muted>
@@ -252,7 +253,7 @@
         <p class="blue-subtitle">The map</p>
         <p class="subtitle">Color coded content map</p>
         <p style="color: #757575">
-          With 400 videos to analyze, I used ML tools—Whisper, CLIP, BLIP, and
+          With 400 video submitted by 20 unique users, I used ML tools—Whisper, CLIP, BLIP, and
           OCR—to categorize and color-code each one, forming distinct genre
           regions.
         </p>
@@ -278,16 +279,17 @@
 <div class="core">
         <div class="process">
           <h4 style="font-weight: 600">
-            Using opaque colors to improve map scanability
+            Choosing abstraction over detail for visual clarity
           </h4>
           <div class="text-break"></div>
           <h4 style="color: #757575">
-            Opaque, high-contrast colors clarify genre regions and make user
+            <!-- Opaque, high-contrast colors clarify genre regions and make user
             icons stand out, while video thumbnails and tags add unnecessary
-            visual noise.
-          </h4>
-          <div class="smallbr"></div>
+            visual noise. -->
 
+Early thumbnail previews were replaced by opaque genre colors to reduce information overload at scale.          </h4>
+          <div class="smallbr"></div>
+        </div>
           <div class="welcome-container">
             <div class="welcome-box1">
               <div class="project-descriptions">
@@ -301,7 +303,7 @@
               <div class="text-break"></div>
               <div class="project-descriptions">
                 <h4 style="color: #757575">
-                  Video thumbnails are viewable, but only comfortable in small quantities.
+                  Thumbnails communicate well individually, but create visual clutter in aggregate.
                 </h4>
               </div>
             </div>
@@ -321,21 +323,20 @@
               </div>
             </div>
           </div>
-        </div>
+        
 
         <div class="bigbr"></div>
         
                 <div class="process">
-                <h4 style="font-weight: 600">
-                    Flexible map regions mirror fuzzy genre definitions
-                </h4>
-                <div class="text-break"></div>
-                <h4 style="color: #757575">
-                    Previous maps were either too free-form or too rigid; the
-                    region-based map balances category clarity with the natural chaos of the
-                    short-form media environment.
-                </h4>
-                <div class="smallbr"></div>
+                  <h4 style="font-weight: 600">
+                      Prioritizing organic structure over rigidity to fit a fluid content ecosystem
+                  </h4>
+                  <div class="text-break"></div>
+                  <h4 style="color: #757575">
+                      Early maps were overly rigid, and didn't reflect the chaotic short-form media environment. The final map is more organic, only introducing legible structure through user interaction.
+                  </h4>
+                  <div class="smallbr"></div>
+                </div>
                 <div class="welcome-container">
                     <div class="welcome-box1">
                     <div class="project-descriptions">
@@ -351,7 +352,7 @@
                     <div class="text-break"></div>
                     <div class="project-descriptions">
                         <h4 style="color: #757575">
-                        The map is a rigid ring, which is legible but not reflective of the media environment.
+                        A rigid ring, while legible, feels at odds with the realities of the  content ecosystem.
                         </h4>
                     </div>
                     </div>
@@ -370,11 +371,10 @@
                     <div class="text-break"></div>
                     <div class="project-descriptions">
                         <h4 style="color: #757575">
-                        The map becomes more legible through interaction, but is otherwise more organic.
+                        The final map is chaotic, but creates space for legibility through interaction.
                         </h4>
                     </div>
                     </div>
-                </div>
                 </div>
                 <div class="bigbr"></div>
 
@@ -476,7 +476,7 @@
             <div class="text-break"></div>
             <div class="project-descriptions">
               <h4 style="color: #757575">
-                Clicking a video creates a video player card and tethers the node more to it's submitter until unselected.
+                Clicking a video creates a video player card and tethers the node to it's submitter until unselected.
               </h4>
             </div>
           </div>
@@ -486,8 +486,7 @@
         <p class="subtitle">Multi-select users to compare and contrast</p>
         <p style="color: #757575">
           Users aren’t limited to one perspective. By selecting multiple users
-          at once, they can trace where their algorithms overlap and connect
-          with others.
+          at once, they can trace where their algorithms overlap and diverge.
         </p>
         <div class="smallbr"></div>
         <video width="100%" loop autoplay muted>
@@ -500,8 +499,7 @@
 
 <div class="project-descriptions">
           <h4 style="color: #757575">
-            Select up to 3 users at a time to compare their tastes and conections across the map and cards.
-          </h4>
+These users not only share tastes but also submitted content, creating direct links.          </h4>
         </div>
         <div class="bigbr"></div>
 
