adjusting name of prototype button

--- a/gallery/atlas.html
+++ b/gallery/atlas.html
@@ -45,7 +45,7 @@
             <div class="special-buttons">
               <a href="https://ysiuz.github.io/20250224_force-directed_exp/"
           target="_blank" class="nav-button">
-                  View Live Prototype↗
+                  View Prototype↗
               </a>
               <a href="../index.html" class="nav-button">
                 <h5>☁</h5>
@@ -145,7 +145,7 @@
           target="_blank"
           class="prototype-button"
         >
-          View Live Prototype↗
+          View Prototype↗
         </a>
       </div>
 
