updating index top copy following billy, updated a0 role description on about, updated nav-topper vertical spacing to be more compact across index and about

--- a/about.html
+++ b/about.html
@@ -48,14 +48,13 @@
 
     <main>
       <div class="bigbr"></div>
-      <div class="bigbr"></div>
+      <div class="smallbr"></div>
 
       <div class="core" id="core">
         <h1>☺ About me</h1>
         <div class="text-break"></div>
         <div class="secondary-text">
-          Hello again! My name is Dion Lewis. I’m a digital product designer based between Toronto and New York. I recently graduated from Carnegie Mellon
-          University (Spring 2025) with a Bachelor's in Design and a minor in
+          Hello again! My name is Dion Lewis. I’m a digital product designer based in Toronto, and a recent CMU Design graduate with a Bachelor's in Design and a minor in
           Social and Political History. 
           
 I believe at it's best, digital infrastructure can help us explore widely, learn freely, draw closer to one another, and feel deeply.
@@ -88,23 +87,24 @@ I believe at it's best, digital infrastructure can help us explore widely, learn
 
         <h1>♨ Experience</h1>
 
-        <div class="smallbr"></div>
-        Freelance Product Designer, a0.dev
+         <div class="smallbr"></div>
+        Product Designer, BestSummerPrograms
         <div class="text-break"></div>
         <h4 style="color:#757575">September 2025—Present</h4>
                 <div class="text-break"></div>
         <div class="secondary-text">
-        Redesigning the a0.dev landing page to better communicate product offerings and drive conversion. Collaborating with founders and the lead designer to align visual design, UX, and growth strategy.
+        Designing core product features and informational elements to improve platform clarity and consistency. Refining the visual system and defining UX flows for new features like program comparison and list sharing.
         </div>
 
-         <div class="smallbr"></div>
-        Freelance Product Designer, BestSummerPrograms
+        <div class="smallbr"></div>
+        Independent Visual Designer, a0.dev
         <div class="text-break"></div>
-        <h4 style="color:#757575">September 2025—Present</h4>
+        <h4 style="color:#757575">September—November 2025</h4>
                 <div class="text-break"></div>
         <div class="secondary-text">
-        Designing core UI components and informational elements to improve platform clarity and consistency. Refining the visual system and defining UX flows for new features like program comparison and sharing.
+        Redesigned the a0.dev landing page to better communicate product offerings and drive conversion. Collaborated with founders and the lead product designer to align visual design, UX, and growth strategy.
         </div>
+
 
         <div class="smallbr"></div>
         Product Design Intern, San Francisco Chronicle
