--- a/index.html
+++ b/index.html
@@ -84,22 +84,41 @@
 
     <!-- START OF GALLERY -->
     <div class="bigbr"></div>
-    <div class="bigbr"></div>
+        <div class="smallbr"></div>
+
     <main>
       <div class="core" id="core">
-        <h1>✌ Hello there!</h1>
+        <h1>✌ Hello there</h1>
         <div class="text-break"></div>
-        <div class="secondary-text">
-          I'm a digital product designer passionate about building accessible
-          experiences that inform, empower, and connect people. Open to
-          freelance and full-time opportunities.
-          <div class="text-break"></div>
-          Currently, Freelance Product Designer @
-          <a href="https://a0.dev" target="_blank">a0.dev</a>. <br />
-          Previously, Product Design Intern @
+        <!-- <div class="secondary-text">
+        I’m a product designer focused on building thoughtful digital experiences that serve and connect people. Based in Toronto. Open to freelance and fulltime opportunities.
+                            <div class="text-break"></div>
+          Currently,  Product Designer @
+          <a href="https://bestsummerprograms.com" target="_blank">BestSummerPrograms</a>. 
+          Recent <a href="https://www.design.cmu.edu/" target="_blank">CMU Design</a>
+         graduate.
+
+         Previously, 
+          <a href="https://a0.dev" target="_blank"
+            >a0.dev</a
+          >,
+          
           <a href="https://www.sfchronicle.com/" target="_blank"
             >San Francisco Chronicle</a
           >.
+        </div>
+
+         <div class="smallbr"></div> -->
+        I'm a product designer focused on building accessible and thoughtful digital experiences that serve people. 
+         Recent <a href="https://www.design.cmu.edu/" target="_blank">CMU Design</a> grad, based in Toronto. 
+        <div class="secondary-text">
+         <div class="text-break"></div>
+        Currently, Product Designer at <a href="https://bestsummerprograms.com" target="_blank">BestSummerPrograms</a>. <br>
+          Previously, 
+          <a href="https://a0.dev" target="_blank"
+            >a0.dev</a>, 
+             <a href="https://www.sfchronicle.com/" target="_blank"
+            >San Francisco Chronicle</a>.
         </div>
         <div class="text-break"></div>
         <div class="text-break"></div>
