--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         </div>
 
          <div class="smallbr"></div> -->
-        I'm a product designer focused on building accessible and thoughtful digital experiences that serve people. 
-         Recent <a href="https://www.design.cmu.edu/" target="_blank">CMU Design</a> grad, based in Toronto. 
+        I'm a product designer focused on building accessible and thoughtful digital experiences.
+        I'm also a recent CMU Design graduate, based in Toronto. 
         <div class="secondary-text">
          <div class="text-break"></div>
         Currently, Product Designer at <a href="https://bestsummerprograms.com" target="_blank">BestSummerPrograms</a>. <br>
