--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 
          <div class="smallbr"></div> -->
         I'm a product designer focused on building accessible and thoughtful digital experiences.
-        I'm also a recent CMU Design graduate, based in Toronto. 
+       Recent CMU Design graduate, based in Toronto. 
         <div class="secondary-text">
          <div class="text-break"></div>
-        Currently, Product Designer at <a href="https://bestsummerprograms.com" target="_blank">BestSummerPrograms</a>. <br>
+        Product Designer at <a href="https://bestsummerprograms.com" target="_blank">BestSummerPrograms</a>. <br>
           Previously, 
           <a href="https://a0.dev" target="_blank"
             >a0.dev</a>, 
