--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <main>
       <div class="core" id="core">
-        <h1>✌ Hello there</h1>
+        <h1>✌ Hello there!</h1>
         <div class="text-break"></div>
         <!-- <div class="secondary-text">
         I’m a product designer focused on building thoughtful digital experiences that serve and connect people. Based in Toronto. Open to freelance and fulltime opportunities.
@@ -110,7 +110,7 @@
 
          <div class="smallbr"></div> -->
         I'm a product designer focused on building accessible and thoughtful digital experiences.
-       Recent CMU Design graduate, based in Toronto. 
+       Recent CMU Design graduate, currently based in Toronto. 
         <div class="secondary-text">
          <div class="text-break"></div>
         Product Designer at <a href="https://bestsummerprograms.com" target="_blank">BestSummerPrograms</a>. <br>
