v1 of index updates

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="text-break"></div>
         <div class="text-break"></div>
-        <div class="secondary-text">
+        <!-- <div class="secondary-text">
           <a href="mailto: lewisdion26@gmail.com" target="_blank">Email</a
           >&nbsp;&nbsp;
           <a
@@ -140,7 +140,7 @@
         <div class="image-gallery">
           <img class="smol" src="images/dion.gif" />
         </div>
-        <hr />
+        <hr /> -->
       </div>
     </main>
 
@@ -161,21 +161,32 @@
             href="https://delightful-chebakia-c33eda.netlify.app/gallery/chronicle.html"
             class="gallery-anchor"
           >
-            <video width="100%" loop autoplay muted>
+            <!-- <video width="100%" loop autoplay muted>
               <source
                 src="../../images/sfchronicle/sfchronicle-thumbnail.mp4"
                 type="video/mp4"
               />
-            </video>
+            </video> -->
+             <img class="project" src="images/sfchronicle/thumbnail.png" />
             <!-- <div class="text-break"></div>
             <h1>San Francisco Chronicle 🔐</h1> -->
             <div class="text-break"></div>
             <p style="color: #363636">San Francisco Chronicle</p>
 
-            <p>Digital news platform</p>
+            <p>Digital news product</p>
             <!-- <h4>Internship · Product Design · Mobile Design · Prototyping</h4> -->
           </a>
 
+          <a href="#" class="gallery-anchor">
+            <img
+              class="project"
+              src="images/a0/thumbnail_1.png"
+            />
+            <div class="text-break"></div>
+            <p style="color: #363636">a0.dev</p>
+
+            <p>Product landing page</p>
+          </a>
           <a href="gallery/lorebot.html" class="gallery-anchor">
             <img
               class="project"
@@ -201,12 +212,14 @@
             href="gallery/atlas.html"
             class="gallery-anchor"
           >
-             <video width="100%" loop autoplay muted>
+             <!-- <video width="100%" loop autoplay muted>
               <source
                 src="../../images/atlas/genre-breakdown.mp4"
                 type="video/mp4"
               />
-            </video>
+            </video> -->
+            <img class="project" src="images/atlas/atlas-v2.png" />
+
 
             <div class="text-break"></div>
             <p style="color: #363636">Atlas</p>
@@ -223,6 +236,14 @@
 
             <p>Landing page</p>
           </a> -->
+          <a href="#" class="gallery-anchor">
+            <img class="project" src="images/bsp/thumbnail_4.png" />
+            <div class="text-break"></div>
+            <p style="color: #363636">BestSummerPrograms</p>
+
+            <p>Education discovery platform</p>
+          </a>
+
           <a href="gallery/inuit.html" class="gallery-anchor">
             <video width="100%" loop autoplay muted>
               <source
