updated index visual design

--- a/about.html
+++ b/about.html
@@ -299,7 +299,43 @@ I believe at it's best, digital infrastructure can help us explore widely, learn
             </div>
           </div>
 
+          <div class="smallbr"></div>
+
+          <a href="gallery/spoken.html">
+            <img class="project" src="images/spoken/spoken_thumbnail.png" />
+                       <div class="text-break"></div>
+
+                        <div class="project-descriptions">
+            <div class="secondary-text">
+            Tuvan language animation.
+            </div>
+
+                  <div class="smallbr"></div>
+
+          <a href="gallery/inuit.html" >
+            <video width="100%" loop autoplay muted>
+              <source
+                src="../../images/inuit/20250217_inuit-thumbnail_edit.mp4"
+                type="video/mp4"
+              />
+            </video>
+            <div class="text-break"></div>
+               <div class="project-descriptions">
+            <div class="secondary-text">
+            Mapping tuberculosis' impact on Inuit communities in Canada.
+            </div>
+          </a>
+
+
+          <a href="gallery/stone.html" class="gallery-anchor">
+            <img class="project" src="images/stone/photography/IMG_2934.JPG" />
+            <div class="text-break"></div>
+            <p style="color: #363636">Basilica of Bom Jesus</p>
+
+            <p>Editorial Design</p>
+          </a>
       </div>
+    </div>
         <div class="bigbr"></div>
 
 
@@ -309,13 +345,12 @@ I believe at it's best, digital infrastructure can help us explore widely, learn
       </div>
 
                <div class="text-break"></div>
-    <div class="core">
+
       <div class="project-descriptions">
         <div class="secondary-text">
           CMU Design 2025 :^) 
         </div>
       </div>
-    </div>
     <div class="bigbr"></div>
     </main>
     <footer>
