--- a/about.html
+++ b/about.html
@@ -53,25 +53,25 @@
       <div class="core" id="core">
         <h1>☺ About me</h1>
         <div class="text-break"></div>
-        <div class="secondary-text">
           Hello again! My name is Dion Lewis. I’m a digital product designer based in Toronto, and a recent CMU Design graduate with a Bachelor's in Design and a minor in
           Social and Political History. 
           
 I believe at it's best, digital infrastructure can help us explore widely, learn freely, draw closer to one another, and feel deeply.
-        </div>
         <div class="text-break"></div>
         <div class="text-break"></div>
                 <div class="secondary-text">
-          <a href="mailto: lewisdion26@gmail.com" target="_blank">Email</a
+          <a href="mailto: lewisdion26@gmail.com"  style="color: #37ABFF;" target="_blank">Email</a
           >&nbsp;&nbsp;
           <a
             href="https://www.linkedin.com/in/dion-lewis-1117b21b5/"
-            target="_blank"
+             style="color: #37ABFF;"
+             target="_blank"
             >LinkedIn</a
           >&nbsp;&nbsp;
           <a
             href="https://drive.google.com/file/d/14EZcBQ3tWuHF3i5kp9bQOhyDJgHgwacX/view?usp=sharing"
-            target="_blank"
+             style="color: #37ABFF;"
+             target="_blank"
             >Resume</a
           >&nbsp;&nbsp;
         </div>
