--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
         <div class="project-box3">
 
        <div class="secondary-text">
-            Product Designer at <a href="https://bestsummerprograms.com" target="_blank">BestSummerPrograms</a>. <br>
+            Product Designer at <a href="https://bestsummerprograms.com" style="color: #37ABFF;" target="_blank">BestSummerPrograms</a>. <br>
           Previously, 
-          <a href="https://a0.dev" target="_blank"
+          <a href="https://a0.dev"  style="color: #37ABFF;" target="_blank"
             >a0.dev</a>, 
-             <a href="https://www.sfchronicle.com/" target="_blank"
+             <a href="https://www.sfchronicle.com/"  style="color: #37ABFF;" target="_blank"
             >San Francisco Chronicle</a>.<br>
 
           </div>
