--- a/about.html
+++ b/about.html
@@ -60,17 +60,17 @@ I believe at it's best, digital infrastructure can help us explore widely, learn
         <div class="text-break"></div>
         <div class="text-break"></div>
                 <div class="secondary-text">
-          <a href="mailto: lewisdion26@gmail.com"  style="color: #37ABFF;" target="_blank">Email</a
+          <a href="mailto: lewisdion26@gmail.com"  style="text-decoration: underline;" target="_blank">Email</a
           >&nbsp;&nbsp;
           <a
             href="https://www.linkedin.com/in/dion-lewis-1117b21b5/"
-             style="color: #37ABFF;"
+             style="text-decoration: underline;"
              target="_blank"
             >LinkedIn</a
           >&nbsp;&nbsp;
           <a
             href="https://drive.google.com/file/d/14EZcBQ3tWuHF3i5kp9bQOhyDJgHgwacX/view?usp=sharing"
-             style="color: #37ABFF;"
+             style="text-decoration: underline;"
              target="_blank"
             >Resume</a
           >&nbsp;&nbsp;
